examples/error/pythonPPError/MBS.mbsx
<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<MBSimProject xmlns="http://www.mbsim-env.de/MBSimXML" name="Project">
  <evaluator xmlns="http://www.mbsim-env.de/MBXMLUtils">python</evaluator>
  <DynamicSystemSolver xmlns="http://www.mbsim-env.de/MBSim" name="MBS">
    <frames/>
    <contours/>
    <groups/>
    <objects>
      <RigidBody name="Rigid body">
        <mass unit="kg">

          <?dummyPI a dummy processing instruction?>

          <!-- a dummy comment -->

          <?dummyPI a dummy processing instruction?>

          <!-- a dummy comment -->

          "linea"
          "lineb"
          ret = 1
          "linec"
          error
          "lined"

          <?dummyPI a dummy processing instruction?>

          <!-- a dummy comment -->

          <?dummyPI a dummy processing instruction?>

          <!-- a dummy comment -->

        </mass>
        <inertiaTensor unit="kg*m^2">
          <xmlMatrix xmlns="http://www.mbsim-env.de/MBXMLUtils">
            <row>
              <ele>0.01</ele>
              <ele>0</ele>
              <ele>0</ele>
            </row>
            <row>
              <ele>0</ele>
              <ele>0.01</ele>
              <ele>0</ele>
            </row>
            <row>
              <ele>0</ele>
              <ele>0</ele>
              <ele>0.01</ele>
            </row>
          </xmlMatrix>
        </inertiaTensor>
        <stateDependentTranslation>
          <TranslationAlongXAxis/>
        </stateDependentTranslation>
        <frames/>
        <contours/>
        <openMBVRigidBody>
          <Cube xmlns="http://www.mbsim-env.de/OpenMBV" name="Cube1">
            <transparency unit="-">0.3</transparency>
            <length unit="m">1</length>
          </Cube>
        </openMBVRigidBody>
        <enableOpenMBVFrameC/>
      </RigidBody>
    </objects>
    <links/>
    <constraints/>
    <observers/>
    <enableOpenMBVFrameI/>
    <environments>
      <MBSimEnvironment>
        <accelerationOfGravity unit="m/s^2">
          <xmlVector xmlns="http://www.mbsim-env.de/MBXMLUtils">
            <ele>0</ele>
            <ele>-9.81</ele>
            <ele>0</ele>
          </xmlVector>
        </accelerationOfGravity>
      </MBSimEnvironment>
    </environments>
  </DynamicSystemSolver>
  <DOPRI5Integrator xmlns="http://www.mbsim-env.de/MBSim">
    <startTime unit="s">0</startTime>
    <endTime unit="s">1</endTime>
    <plotStepSize unit="s">1e-2</plotStepSize>
  </DOPRI5Integrator>
</MBSimProject>
